--- a/estilo.css
+++ b/estilo.css
@@ -6,13 +6,13 @@
 body{
 	background:rgba(255,255,255,1);
 	color:rgba(25,25,25,1);
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Muli', sans-serif;
 	font-weight:300;
 }
 
 h1, h2, h3, h4{
 	font-family: 'Muli', sans-serif;
-	font-weight:700; 
+	font-weight:700;
 }
 
 h1{
