--- a/estilo.css
+++ b/estilo.css
@@ -10,23 +10,27 @@ body{
 	font-weight:300;
 }
 
-h1, h2, h3, h4{
+h1, h3, h4{
 	font-family: 'Muli', sans-serif;
-	font-weight:700;
+	font-weight:900;
+}
+
+h2 {
+	font-family: 'Muli', sans-serif;
+	font-weight:300;
 }
 
 h1{
 	letter-spacing:0.1em;
-	color:rgba(255,255,255,0.9);
+	color:rgba(255,0,0,0.9);
 	text-shadow: 1px 1px 0 #999;
 	text-align:center;
 }
 
 h2{
 	letter-spacing:0.02em;
-	color:rgba(255,255,255,0.6);
+	color:rgba(255,0,0,0.6);
 	padding:0.2em 0;
-	text-shadow: 1px 1px 0 #999;
 	text-align:center;
 }
 
@@ -161,9 +165,9 @@ video{
 }
 
 .item:hover figure img{
-	transform:scale(1.25);
+	transform:scale(2);
 	filter: grayscale(0);
-	transition:all ease-out 0.5s;
+	transition:all ease-out 3s;
 }
 
 .item h4{
