--- a/estilo.css
+++ b/estilo.css
@@ -9,21 +9,25 @@ body{
 	font-family: 'Muli', sans-serif;
 	font-weight:300;
 }
+h1{
+	font-family: 'Muli', sans-serif;
+	font-weight:900;
+	font-size: 400%
+}
 
-h1, h3, h4{
+h3, h4{
 	font-family: 'Muli', sans-serif;
 	font-weight:900;
 }
 
 h2 {
 	font-family: 'Muli', sans-serif;
-	font-weight:300;
+	font-weight:600;
 }
 
 h1{
 	letter-spacing:0.1em;
 	color:rgba(255,0,0,0.9);
-	text-shadow: 1px 1px 0 #999;
 	text-align:center;
 }
 
@@ -161,12 +165,12 @@ video{
 	width:100%;
 	height:auto;
 	margin-bottom:-4px;
-	filter: grayscale(1);
+
 }
 
 .item:hover figure img{
-	transform:scale(2);
-	filter: grayscale(0);
+	transform:scale(1.5);
+
 	transition:all ease-out 3s;
 }
 
