--- a/estilo.css
+++ b/estilo.css
@@ -10,8 +10,8 @@ body{
 	font-weight:300;
 }
 h1{
-	font-family: 'Muli', sans-serif;
-	font-weight:900;
+	font-family: 'Permanent Marker', cursive;
+	font-weight:600;
 	font-size: 400%
 }
 
@@ -21,8 +21,9 @@ h3, h4{
 }
 
 h2 {
-	font-family: 'Muli', sans-serif;
-	font-weight:600;
+	font-family: 'Roboto', sans-serif;
+	font-weight:700;
+	font-size: 100%
 }
 
 h1{
@@ -33,7 +34,7 @@ h1{
 
 h2{
 	letter-spacing:0.02em;
-	color:rgba(255,0,0,0.6);
+	color:rgba(255,0,0,1);
 	padding:0.2em 0;
 	text-align:center;
 }
